--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack-config/webpack.config.dev.js",
-    "prod": "webpack --config webpack-config/webpack.config.prod.js"
+    "build": "webpack --config webpack-config/webpack.config.prod.js",
+    "build-ssr": "webpack --config webpack-config/webpack.config.ssr.js",
+    "app": "node public/ssr.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,14 @@
   },
   "homepage": "https://github.com/Shagon1k/BlogsApp#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^5.0.6",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -36,14 +46,15 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "node-sass": "^4.7.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
