--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,5 @@
 		"react",
 		["env", {"modules": false}]
 	],
-	"plugins": ["react-hot-loader/babel"]
+	"plugins": ["react-hot-loader/babel", "transform-object-rest-spread"]
 }
