--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "node-sass": "^4.7.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
