--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-loop": "^4.2.4"
   },
   "devDependencies": {
     "babel": "^6.23.0",
