--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
     "dev": "webpack-dev-server --config webpack-config/webpack.config.dev.js",
     "build": "webpack --config webpack-config/webpack.config.prod.js",
     "build-ssr": "webpack --config webpack-config/webpack.config.ssr.js",
-    "app": "node public/ssr.bundle.js"
+    "app": "node public/ssr.bundle.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
+  "jest": {
+    "verbose": true,
+    "setupFiles": [
+      "./jest-config/jestconfig.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "scriptPreprocessor": "<rootDir>/node_modules/jest-css-modules",
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -47,16 +61,25 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "jest": "^22.4.2",
+    "jest-css-modules": "^1.1.0",
+    "jsdom": "^11.6.2",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "tape": "^4.9.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
