--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "ignore-loader": "^0.1.2",
     "jest": "^22.4.2",
     "jest-css-modules": "^1.1.0",
     "jsdom": "^11.6.2",
